# sentei

./: Cargo.toml  LICENSE
go_bot/: Cargo.toml
go_bot/src/: agent.rs  board.rs  game_state.rs  lib.rs  move.rs  player.rs  point.rs  stones_string.rs
go_bot/src/agents/: mod.rs  naive_agent.rs
iOS/: project.yml
iOS/Sentei/: ContentView.swift  SenteiApp.swift  core.swift
iOS/Sentei.xcodeproj/: project.pbxproj
iOS/Sentei.xcodeproj/project.xcworkspace/xcuserdata/complexityclass.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/Sentei.xcodeproj/xcuserdata/complexityclass.xcuserdatad/xcschemes/: xcschememanagement.plist
shared/: Cargo.toml  uniffi.toml
shared/src/: app.rs  lib.rs
shared_types/: build.rs
